--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
         "@types/node": "^17.0.45",
         "@types/react": "^18.2.14",
         "@types/react-dom": "^18.2.6",
-        "@types/react-router-dom": "^5.3.3",
+        "@types/react-router-dom": "^5.3.3", 
+        "@types/styled-components": "^5.1.26",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.1.1",
         "react-router-dom": "^5.1.9",
         "react-scripts": "5.0.1",
+        "styled-components": "^6.0.1",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
     },
