--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.11.16",
+        "@mui/joy": "^5.0.0-alpha.85",
         "@mui/material": "^5.13.6",
         "@reduxjs/toolkit": "^1.9.5",
         "@testing-library/jest-dom": "^5.16.5",
@@ -14,7 +16,7 @@
         "@types/node": "^17.0.45",
         "@types/react": "^18.2.14",
         "@types/react-dom": "^18.2.6",
-        "@types/react-router-dom": "^5.3.3", 
+        "@types/react-router-dom": "^5.3.3",
         "@types/styled-components": "^5.1.26",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
