--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@emotion/styled": "^11.11.0",
         "@mui/icons-material": "^5.11.16",
         "@mui/joy": "^5.0.0-alpha.85",
+        "@mui/lab": "^5.0.0-alpha.135",
         "@mui/material": "^5.13.6",
         "@reduxjs/toolkit": "^1.9.5",
         "@testing-library/jest-dom": "^5.16.5",
@@ -18,6 +19,7 @@
         "@types/react-dom": "^18.2.6",
         "@types/react-router-dom": "^5.3.3",
         "@types/styled-components": "^5.1.26",
+        "moment": "^2.29.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.1.1",
