--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/react": "^18.2.14",
         "@types/react-dom": "^18.2.6",
         "@types/react-router-dom": "^5.3.3",
+        "@types/redux-logger": "^3.0.12",
         "@types/styled-components": "^5.1.26",
         "moment": "^2.29.4",
         "react": "^18.2.0",
@@ -26,6 +27,7 @@
         "react-redux": "^8.1.1",
         "react-router-dom": "^5.1.9",
         "react-scripts": "5.0.1",
+        "redux-logger": "^3.0.6",
         "styled-components": "^6.0.1",
         "swiper": "^9.4.1",
         "typescript": "^4.9.5",
