--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "@types/react-router-dom": "^5.3.3",
         "@types/redux-logger": "^3.0.12",
         "@types/styled-components": "^5.1.26",
+        "assert": "^2.1.0",
+        "axios": "^1.6.2",
         "moment": "^2.29.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
