--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
+        "@material-ui/core": "^4.12.4",
         "@mui/icons-material": "^5.11.16",
         "@mui/joy": "^5.0.0-alpha.85",
         "@mui/lab": "^5.0.0-alpha.135",
@@ -31,6 +32,7 @@
         "react-scripts": "5.0.1",
         "redux-logger": "^3.0.6",
         "styled-components": "^6.1.1",
+        "sweetalert2": "^11.10.1",
         "swiper": "^9.4.1",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
