--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "sweetalert2": "^11.10.1",
         "swiper": "^9.4.1",
         "typescript": "^4.9.5",
+        "universal-cookie": "^6.1.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
