--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-router-dom": "^5.1.9",
         "react-scripts": "5.0.1",
         "redux-logger": "^3.0.6",
+        "render": "^0.1.4",
         "styled-components": "^6.1.1",
         "sweetalert2": "^11.10.1",
         "swiper": "^9.4.1",
